--- a/receitas-culinarias/src/components/Card/Card.css
+++ b/receitas-culinarias/src/components/Card/Card.css
@@ -3,13 +3,13 @@
     justify-content: center;
     align-items: center;
     flex-wrap: wrap;
-    padding: 12px;
-    gap: 18px;
+    padding: 8px;
+    gap: 8px;
 }
 
 .card-receita{
     width: 600px;
-    height: 600px;
+    height: 700px;
     border-radius: 10px;
     background-color: rgb(36, 36, 37);
     color: #fff;
@@ -34,17 +34,46 @@
 
 .ingredientes-modoprep{
     display: flex;
-    justify-content: center;
     align-items: center;
     flex-direction: column;
-    padding: 0px;
+    gap: 8px;
+    padding: 8px;
     
     h1{
         font-size: 18px;
     }
     p{
         font-size: 14px;
-        width: 500px;
-        margin-bottom: 0px;
+        width: auto;
+        margin-bottom: 10px;
+        padding: 2px;
+        border: 2px solid  #fff;
+    }
+
+}
+
+.ocultos{
+    display: flex;
+    justify-content: center;
+    padding: 8px;
+    gap: 8px;
+    
+    p{
+        color: #ffffff;
+        font-weight: 700;
+    }
+}
+
+.ocultos button{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 30px;
+    background-color: rgb(36, 36, 37);
+    border: 2px solid #fff;
+    border-radius: 5px;
+
+    img{
+        height: 25px;
     }
 }
