--- a/receitas-culinarias/src/components/Card/Card.css
+++ b/receitas-culinarias/src/components/Card/Card.css
@@ -3,13 +3,43 @@
     justify-content: center;
     align-items: center;
     flex-wrap: wrap;
-    padding: 8px;
+    padding: 10px;
     gap: 8px;
 }
 
 .card-receita{
-    width: 600px;
-    height: 700px;
+    width: 300px;
+    height: 280px;
+    border-radius: 10px;
+    background-color: rgb(36, 36, 37);
+    color: #fff;
+    border: 2px solid #fff;
+    box-shadow: 3px 3px 3px 4px #c6c6c6;
+}
+
+.card-receita.expandido1{
+    width: 400px;
+    height:480px;
+    border-radius: 10px;
+    background-color: rgb(36, 36, 37);
+    color: #fff;
+    border: 2px solid #fff;
+    box-shadow: 3px 3px 3px 4px #c6c6c6;
+}
+
+.card-receita.expandido2{
+    width: 400px;
+    height:565px;
+    border-radius: 10px;
+    background-color: rgb(36, 36, 37);
+    color: #fff;
+    border: 2px solid #fff;
+    box-shadow: 3px 3px 3px 4px #c6c6c6;
+}
+
+.card-receita.expandidoConjunto{
+    width: 400px;
+    height: 785px;
     border-radius: 10px;
     background-color: rgb(36, 36, 37);
     color: #fff;
@@ -21,6 +51,7 @@
 
     h2{
         font-size: 20px;
+        padding: 0;
     }
 
     img{
