--- a/receitas-culinarias/src/components/Card/Card.css
+++ b/receitas-culinarias/src/components/Card/Card.css
@@ -18,7 +18,7 @@
 
 .card-receita.expandido1{
     width: 380px;
-    height:480px;
+    height:400px;
     border-radius: 10px;
     background-color: rgb(36, 36, 37);
     color: #fff;
@@ -27,7 +27,7 @@
 
 .card-receita.expandido2{
     width: 380px;
-    height:565px;
+    height:535px;
     border-radius: 10px;
     background-color: rgb(36, 36, 37);
     color: #fff;
@@ -36,7 +36,7 @@
 
 .card-receita.expandidoConjunto{
     width: 380px;
-    height: 785px;
+    height: 685px;
     border-radius: 10px;
     background-color: rgb(36, 36, 37);
     color: #fff;
@@ -103,4 +103,41 @@
     img{
         height: 25px;
     }
+}
+
+.loading-receitas{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-top: 18vw;
+    color: #fff;
+}
+
+.loading-receitas p{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 300px;
+    height: 40px;
+    border-radius: 18px;
+    background-color: rgb(36, 36, 37);
+}
+
+.erro-receitas{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-top: 18vw;
+    color: #fff;
+}
+
+.erro-receitas p{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 300px;
+    height: 40px;
+    border-radius: 18px;
+    background-color: rgb(36, 36, 37);
+    box-shadow: 2px 4px 8px rgb(97, 101, 100);
 }
